// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render and match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  margin: 25px 10px;
}

.c1 {
  position: relative;
  bottom: -3px;
  margin: 0 10px;
  padding-bottom: 7px;
}

.c1 div {
  cursor: pointer;
  font-weight: 400 !important;
}

.c2 {
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
  height: 2px;
  background: #B727EA;
}

<div
  class=""
>
  <div
    class="c0"
    data-cy="tabs"
  >
    <div
      class="c1"
    >
      <div>
        Tab1
      </div>
      <div
        class="c2"
        data-projection-id="1"
        style="opacity: 1;"
      />
    </div>
    <div
      class="c1"
    >
      <div>
        Tab2
      </div>
    </div>
  </div>
  <div
    class="c3"
  >
    <span>
      Tab1 Content
    </span>
  </div>
</div>
`;

exports[`<Tabs /> should render as links and match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 {
  margin: 25px 10px;
}

.c1 {
  position: relative;
  bottom: -3px;
  margin: 0 10px;
  padding-bottom: 7px;
}

.c1 div {
  cursor: pointer;
  font-weight: 400 !important;
}

.c2 a {
  color: #2F3850 !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:visited,
.c2 a:hover {
  color: #2F3850;
}

.c4 a {
  color: #9AA1B6 !important;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 a:visited,
.c4 a:hover {
  color: #2F3850;
}

.c3 {
  position: absolute;
  bottom: -2px;
  left: 0;
  right: 0;
  height: 2px;
  background: #B727EA;
}

<div
  class=""
>
  <div
    class="c0"
    data-cy="tabs"
  >
    <div
      class="c1 c2"
    >
      <div>
        <a
          href="/url1"
        >
          Url1
        </a>
      </div>
      <div
        class="c3"
        data-projection-id="2"
        style="opacity: 1;"
      />
    </div>
    <div
      class="c1 c4"
    >
      <div>
        <a
          href="/url2"
        >
          Url2
        </a>
      </div>
    </div>
  </div>
  <div
    class="c5"
  />
</div>
`;
